# GameEngine

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md  format-code.py  format.py  format_code.py  gen-shader.py  generate-shader.py  generate_shader.py  lex.lua  main.lua  run-tests.sh  test.sh
engine/shader/: CMakeLists.txt  cbuffer.hlsl.h  common.hlsl.h  descriptor_table_defines.hlsl.h  diffuse_irradiance.ps.hlsl.h  ibl_diffuse_irradiance.ps.hlsl.h  ibl_prefilter.ps.hlsl.h  path_tracer.hlsl.h  pbr.hlsl  pbr.hlsl.h  prefilter.ps.hlsl.h  sampler.hlsl.h  shader_defines.hlsl.h  shader_resource_defines.hlsl.h  shadow.hlsl  shared_diffuse_irradiance.h  shared_path_tracer.h  shared_prefilter.h  sky.hlsl.h  structured_buffer.hlsl.h  unordered_access_defines.hlsl.h  vsinput.glsl.h
engine/shader/glsl/: billboard.vs.glsl  brdf.ps.glsl  cube_map.vs.glsl  debug_draw.ps.glsl  debug_draw.vs.glsl  debug_draw_texture.ps.glsl  debug_draw_texture.vs.glsl  diffuse_irradiance.ps.glsl  forward.ps.glsl  gbuffer.ps.glsl  lighting.glsl  lighting.ps.glsl  mesh.vs.glsl  path_tracer.cs.glsl  pbr.glsl  post_process.ps.glsl  prefilter.ps.glsl  screenspace_quad.vs.glsl  shadow.glsl  sky.ps.glsl  sky.vs.glsl  skybox.ps.glsl  ssao.ps.glsl  texture.ps.glsl  visualization.ps.glsl  visualization.vs.glsl  voxelization.gs.glsl  voxelization.ps.glsl  voxelization.vs.glsl  voxelization_pre.cs.glsl  vxgi.glsl
engine/shader/hlsl/: bloom_downsample.cs.hlsl  bloom_setup.cs.hlsl  bloom_upsample.cs.hlsl  brdf.ps.hlsl  cube_map.vs.hlsl  debug_draw.ps.hlsl  debug_draw.vs.hlsl  debug_draw_texture.ps.hlsl  debug_draw_texture.vs.hlsl  depth.ps.hlsl  diffuse_irradiance.ps.hlsl  forward.ps.hlsl  gbuffer.ps.hlsl  highlight.ps.hlsl  input_output.hlsl  lighting.hlsl  lighting.ps.hlsl  mesh.vs.hlsl  particle_draw.ps.hlsl  particle_draw.vs.hlsl  particle_emission.cs.hlsl  particle_simulation.cs.hlsl  path_tracer.cs.hlsl  post_process.ps.hlsl  prefilter.ps.hlsl  screenspace_quad.vs.hlsl  shadow.vs.hlsl  shadowmap_point.ps.hlsl  shadowmap_point.vs.hlsl  sky.ps.hlsl  sky.vs.hlsl  skybox.ps.hlsl  skybox.vs.hlsl  sprite.ps.hlsl  sprite.vs.hlsl  ssao.ps.hlsl  to_cube_map.ps.hlsl  tone.ps.hlsl  voxelization_pre.cs.hlsl
engine/shader/metal/: Shaders.air  Shaders.metal  Shaders.metallib
engine/src/: CMakeLists.txt
engine/src/engine/: pch.h
engine/tests/: CMakeLists.txt
modules/: CMakeLists.txt
modules/bullet3/: CMakeLists.txt  bullet3_physics_manager.cpp  bullet3_physics_manager.h
modules/bullet_physics/: CMakeLists.txt  bullet_physics_manager.cpp  bullet_physics_manager.h
modules/d3d11/: CMakeLists.txt  d3d11_graphics_manager.cpp  d3d11_graphics_manager.h  d3d11_pipeline_state_manager.cpp  d3d11_pipeline_state_manager.h  d3d11_resources.h
modules/d3d12/: CMakeLists.txt  d3d12_core.cpp  d3d12_core.h  d3d12_graphics_manager.cpp  d3d12_graphics_manager.h  d3d12_pipeline_state_manager.cpp  d3d12_pipeline_state_manager.h  imgui_impl_dx12.cpp
modules/d3d_common/: CMakeLists.txt  d3d_common.cpp  d3d_common.h  d3d_convert.h
modules/opengl/: CMakeLists.txt  opengl_graphics_manager.cpp  opengl_graphics_manager.h  opengl_resources.h
modules/opengl4/: CMakeLists.txt  opengl4_graphics_manager.cpp  opengl4_graphics_manager.h
modules/opengl_common/: CMakeLists.txt  opengl_common_graphics_manager.cpp  opengl_common_graphics_manager.h  opengl_helpers.h  opengl_helpers_forward.h  opengl_pipeline_state_manager.cpp  opengl_pipeline_state_manager.h  opengl_prerequisites.h  opengl_resources.cpp  opengl_resources.h
modules/opengles3/: CMakeLists.txt  opengles3_graphics_manager.cpp  opengles3_graphics_manager.h
modules/tinygltf/: CMakeLists.txt  tinygltf_loader.cpp  tinygltf_loader.h
modules/vk/: CMakeLists.txt  imgui_impl_vulkan.cpp  vulkan_graphics_manager.cpp  vulkan_graphics_manager.h  vulkan_helpers.cpp  vulkan_helpers.h
source/: CMakeLists.txt  lapi.cpp  lapi.h  lauxlib.cpp  lauxlib.h  lbaselib.cpp  lbitlib.cpp  lcode.cpp  lcode.h  lcorolib.cpp  lctype.cpp  ldblib.cpp  ldebug.cpp  ldo.cpp  ldo.h  ldump.cpp  lfunc.cpp  lfunc.h  lgc.cpp  lgc.h  linit.cpp  liolib.cpp  llex.cpp  llex.h  llimits.h  lmathlib.cpp  lmem.cpp  lmem.h  loadlib.cpp  lobject.cpp  lobject.h  lopcodes.cpp  lopcodes.h  loslib.cpp  lparser.cpp  lparser.h  lstate.cpp  lstate.h  lstring.cpp  lstring.h  (+18 more)
source/editor/: CMakeLists.txt
source/engine/: CMakeLists.txt
source/engine/tests/: pch.h
source/shader/: CMakeLists.txt  cbuffer.h  cbuffer.hlsl.h  particle_defines.h  particle_defines.hlsl.h  pbr.hlsl  sampler.hlsl.h  shader_constants.h  shader_defines.h  shader_defines.hlsl.h  shader_resource_defines.hlsl.h  shadow.hlsl  structured_buffer.hlsl.h  texture_binding.h  texture_binding.hlsl.h  unordered_access_defines.hlsl.h  vsinput.glsl.h
source/shader/glsl/: base_color.frag.glsl  billboard.vert.glsl  billboard.vs.glsl  bloom_downsample.comp.glsl  bloom_setup.comp.glsl  bloom_upsample.comp.glsl  brdf.frag.glsl  brdf.pixel.glsl  brdf.ps.glsl  cube_map.vert.glsl  debug_draw_texture.frag.glsl  debug_draw_texture.pixel.glsl  debug_draw_texture.ps.glsl  debug_draw_texture.vert.glsl  depth.pixel.glsl  diffuse_irradiance.frag.glsl  diffuse_irradiance.pixel.glsl  fxaa.frag.glsl  gbuffer.frag.glsl  gbuffer.pixel.glsl  gbuffer.ps.glsl  highlight.pixel.glsl  lighting.frag.glsl  lighting.glsl  lighting.pixel.glsl  lighting.ps.glsl  mesh.vert.glsl  mesh.vs.glsl  particle.pixel.glsl  particle.vert.glsl  particle_draw.pixel.glsl  particle_draw.vert.glsl  particle_emission.comp.glsl  particle_emit.comp.glsl  particle_init.comp.glsl  particle_kickoff.comp.glsl  particle_sim.comp.glsl  particle_simulation.comp.glsl  path_tracer.cs.glsl  pbr.glsl  (+37 more)
source/shader/hlsl/: bloom_downsample.comp.hlsl  bloom_downsample.cs.hlsl  bloom_setup.comp.hlsl  bloom_setup.cs.hlsl  bloom_upsample.comp.hlsl  bloom_upsample.cs.hlsl  cbuffer.h  depth.pixel.hlsl  gbuffer.frag.hlsl  gbuffer.pixel.hlsl  gbuffer.ps.hlsl  highlight.pixel.hlsl  input_output.hlsl  lighting.frag.hlsl  (+31 more)
tools/editor/: CMakeLists.txt  vxgi.yaml
tools/texture_writer/: CMakeLists.txt
(+1081 files in other folders)
