add_subdirectory(opengl_common)
if (WIN32)
    add_subdirectory(opengl4)
    add_subdirectory(d3d_common)
    add_subdirectory(d3d11)
    add_subdirectory(d3d12)
    add_subdirectory(vk)
elseif (EMSCRIPTEN)
    add_subdirectory(opengles3)
endif()

if (USE_BULLET)
    add_subdirectory(bullet3)
endif()

if (BUILD_TINYGLTF_LOADER)
    add_subdirectory(tinygltf)
endif()