add_executable(luacppc
    lapi.cpp
    lauxlib.cpp
    lbaselib.cpp
    lcode.cpp
    lcorolib.cpp
    lctype.cpp
    ldblib.cpp
    ldebug.cpp
    ldo.cpp
    ldump.cpp
    lfunc.cpp
    lgc.cpp
    linit.cpp
    liolib.cpp
    llex.cpp
    lmathlib.cpp
    lmem.cpp
    loadlib.cpp
    lobject.cpp
    lopcodes.cpp
    loslib.cpp
    lparser.cpp
    lstate.cpp
    lstring.cpp
    lstrlib.cpp
    ltablib.cpp
    ltable.cpp
    ltests.cpp
    ltm.cpp
    lua.cpp
    lundump.cpp
    lutf8lib.cpp
    lvm.cpp
    lzio.cpp
)
